Update, modify, create and get working for basic crud functionality
